[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highcharts-python-pipeline"
version = "0.1.0"
description = "Generate data visualizations with the Highcharts for Python Toolkit."
requires-python = ">=3.12"
dependencies = [
    "highcharts-core>=1.10.3",
    "pandas>=2.2.0",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff==0.15.16",
    "watchdog>=6.0.0",
]

# This project ships a Streamlit app, not an importable package, so tell
# Hatchling it's fine to build an empty wheel (otherwise `uv sync` fails
# trying to determine which files to ship).
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff.lint]
# E/F/W catch real bugs and are clean today; I/UP/SIM are zero-finding ratchets
# that keep imports sorted, syntax modern (py312, auto-inferred from
# requires-python), and code un-convoluted; B (bugbear) is the only family with
# findings (zip without strict=). Deliberately NOT "ALL" — that pulls in rules
# that fight this app's design (lazy imports, pytest asserts, no __init__.py,
# intentional unicode in UI strings).
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# The formatter owns code line length. The only line ruff format can't shorten
# is an un-splittable CSS string inside an f-string literal, so E501 here would
# be pure noise.
ignore = ["E501"]

[tool.ruff.format]
# Defaults are correct for this project (line length 88, double quotes, magic
# trailing commas). This table makes the formatter explicitly opted in so CI
# can gate on `ruff format --check`.
